-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8, 6.9
-
None
-
4c1ccdf61 (dev), aec00c171 (6.9), ef462ff1e (6.8)
Well it asserts.
| For Gerrit Dashboard: QTBUG-132753 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 617502,2 | Fix removeMultiple running animations in parallel | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
| 618225,2 | Fix removeMultiple running animations in parallel | 6.9 | qt/qtgraphs | Status: MERGED | +2 | 0 |
| 618426,2 | Fix removeMultiple running animations in parallel | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |