Fix removeMultiple running animations in parallel

Fixes: QTBUG-132753
Fixes: QTBUG-132711
Change-Id: I334dead9c06c977dcdd0905f1445209a31f85e03
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 4c1ccdf611cf84c3c4dee91c9990bc6a94910da5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit aec00c1712005d6bc32ffb9551037d53718af1e9)